--- a/SRIS/SRIS/Views/Case/FollowDetails.cshtml
+++ b/SRIS/SRIS/Views/Case/FollowDetails.cshtml
@@ -74,7 +74,7 @@
                 }
                 else {
                     layer.alert("没有查询到信息", function () {
-                        layer.close(this);
+                        parent.layer.closeAll();
                     });
                 }
             },"json")
