--- a/SRIS/SRIS/Views/Shared/_BlankPage.cshtml
+++ b/SRIS/SRIS/Views/Shared/_BlankPage.cshtml
@@ -39,7 +39,11 @@
     <link href="~/Content/layui/css/layui.css" rel="stylesheet" />
     <script src="~/Content/layer/layer.js"></script>
     <script src="~/Content/layui/layui.js"></script>
-   
+    <style type="text/css">
+        .field-validation-error {
+            color: red;
+        }
+    </style>
 </head>
 
 <body class="no-skin">
