--- a/SRIS/SRIS/Views/BBHJCase/AddBBHJ.cshtml
+++ b/SRIS/SRIS/Views/BBHJCase/AddBBHJ.cshtml
@@ -16,14 +16,36 @@
     <title>添加宝贝回家信息</title>
     <style type="text/css">
         .field-validation-error {
-            color:red;
+            color: red;
         }
     </style>
+    <script type="text/javascript">
+        $(function () {
+            $("#btn_submit").click(function () {
+                debugger
+                var registerInfoId = $("#RegisterInfoId").val();
+                var bbhjCode = $("#BBHJCode").val();
+                var volunteer = $("#Volunteer").val();
+                var remarks = $("#Remarks").val();
+                $.post("/BBHJCase/AddBBHJCase", { param: JSON.stringify({ RegisterInfoId: registerInfoId, BBHJCode: bbhjCode, Volunteer: volunteer, Remarks: remarks }) }, function (data) {
+                    if (data.status) {
+                        layer.alert(data.message, { icon: 1 }, function () {
+                            layer.closeAll();
+                            parent.window.location.reload();
+                        })
+                    }
+                    else {
+                        layer.alert(data.message, {icon:2});
+                    }
+                }, "json")
+            });
+        })
+    </script>
 </head>
 <body style="margin-top:40px">
     <form class="layui-form" action="/BBHJCase/AddBBHJ" method="post">
         @Html.AntiForgeryToken()
-        @Html.Hidden(model => model.RegisterInfoId);
+        @Html.HiddenFor(model => model.RegisterInfoId);
         <div class="layui-form-item">
             <div class="layui-inline">
                 @Html.LabelFor(model => model.BBHJCode, new { @class = "layui-form-label" })
@@ -54,26 +76,24 @@
 
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <input type="submit" class="layui-btn" value="提交" />
+                <input type="button" id="btn_submit" class="layui-btn" value="提交" />
                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
-        </from>
+    </form>
 
-        <script>
-            //Demo
-            layui.use('form', function () {
-                var form = layui.form;
-                //监听提交
-                //form.on('submit(demo1)', function (data) {
-                //    layer.alert(JSON.stringify(data.field), {
-                //        title: '最终的提交信息'
-                //    })
-                //    return false;
-                //});
-            });
-        </script>
-
-
+    <script>
+        //Demo
+        layui.use('form', function () {
+            var form = layui.form;
+            //监听提交
+            //form.on('submit(demo1)', function (data) {
+            //    layer.alert(JSON.stringify(data.field), {
+            //        title: '最终的提交信息'
+            //    })
+            //    return false;
+            //});
+        });
+    </script>
 </body>
 </html>
