--- a/SRIS/SRIS/Views/ReturnCase/Index.cshtml
+++ b/SRIS/SRIS/Views/ReturnCase/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@model SRIS.ViewModels.RegisterViewModel
+﻿
 @{
-    ViewBag.Title = "全部案例";
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_BlankPage.cshtml";
 }
+
 <body>
     <div class="main-content">
         <div class="main-content-inner">
@@ -16,13 +17,13 @@
                         @Html.ActionLink("首页", "Index", "Home")
                     </li>
                     <li>
-                        @Html.ActionLink("全部案例", "AllCase", "Case")
+                        @Html.ActionLink("已退案例", "Index", "ReturnCase")
                     </li>
                 </ul><!-- /.breadcrumb -->
             </div>
 
             <div style="margin-left: 20px; margin-top:20px">
-               
+
                 <div class="demoTable">
                     <form class="layui-form layui-form-pane">
                         <div class="layui-form-item">
@@ -58,7 +59,7 @@
                     <button class="layui-btn" data-type="reload">搜索</button>
                     <button id="btn_Create" class="layui-btn">新建</button>
                 </div>
-                
+
 
                 <table class="layui-hide" id="test"></table>
             </div>
@@ -66,19 +67,7 @@
             <script type="text/html" id="barDemo">
                 <a onclick="gjxq('{{d.RegisterInfoId}}')" class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">跟进详情</a>
                 <a onclick="LinkManInfo('{{d.RegisterInfoId}}')" class="layui-btn layui-btn-sm layui-btn-xs" lay-event="detail">联系人信息</a>
-                <button onclick="btn_ydbbhj('{{d.RegisterInfoId}}')" class="layui-btn layui-btn-sm layui-btn-normal">引导宝贝回家</button>
-                <a onclick="btn_SetSuccess('{{d.RegisterInfoId}}')" class="layui-btn layui-btn-xs" lay-event="edit">设置成功案例</a>
-                <button onclick="btn_ReturnTask('{{d.RegisterInfoId}}')" class="layui-btn layui-btn-sm layui-btn-normal">退任务</button>
-                <a onclick="btn_Edit('{{d.RegisterInfoId}}')" class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-                <a onclick="Del('{{d.RegisterInfoId}}')" class="layui-btn layui-btn-danger layui-btn-xs">删除</a>
-            </script>
-
-            <script type="text/html" id="djLink">
-                <a href="{{d.RegisterLink}}" class="layui-table-link" target="_blank">{{ d.RegisterLink }}</a>
-            </script>
-
-            <script type="text/html" id="ftLink">
-                <a href="{{d.PostLink}}" class="layui-table-link" target="_blank">{{ d.PostLink }}</a>
+                @*<a onclick="Del('{{d.RegisterInfoId}}')" class="layui-btn layui-btn-danger layui-btn-xs">删除</a>*@
             </script>
 
             <script>
@@ -87,16 +76,16 @@
 
                     var tableIns = table.render({
                         elem: '#test'
-                      , url: '/Case/GetAllCase'
+                      , url: '/ReturnCase/GetReturnCase'
                         //, cellMinWidth: 80 //全局定义常规单元格的最小宽度，layui 2.2.1 新增
                       , cols: [[
                         { field: 'CaseCode', title: '案例编号', width: '120' }
                         , { field: 'SRTypeName', title: '寻亲类别', width: '100' } //width 支持：数字、百分比和不填写。你还可以通过 minWidth 参数局部定义当前单元格的最小宽度，layui 2.2.1 新增
                         , { field: 'Title', title: '标题', width: '150' }
                         , { field: 'BeSeekerName', title: '被寻人姓名', width: '100' }
-                        , { field: 'getTaskDate', title: '领任务时间', width: '100' }
-                        , { field: 'RegisterLink', templet: '#djLink', title: '登记信息', align: 'center', width: '100' } //单元格内容水平居中
-                        , { field: 'PostLink', templet: '#ftLink', title: '发帖链接', align: 'left', width: '100' } //单元格内容水平居中
+                        , { field: 'GetTaskDateTime', title: '领任务时间', width: '150' }
+                        , { field: 'ReturnReason',  title: '退任务原因', align: 'center', width: '200' } //单元格内容水平居中
+                        , { field: 'ReturnTaskDateTime', title: '退任务时间', align: 'left', width: '150' } //单元格内容水平居中
                         , { field: 'Remarks', title: '备注', align: 'left', width: '150' }
                         , { field: 'right', title: '操作', align: 'left', toolbar: '#barDemo', width: '550' }
                       ]]
@@ -132,13 +121,7 @@
                     });
                 });
 
-                $(function () {
-                    // 新建
-                    $("#btn_Create").click(function () {
-                        window.location.href = "/Case/CreateCase";
-                    });
-
-                })
+               
 
                 // 联系人信息
                 function LinkManInfo(id) {
@@ -152,80 +135,6 @@
                     });
                 }
 
-                // 编辑案例信息
-                function btn_Edit(id) {
-                    window.location.href = "/Case/CreateCase?id=" + id;
-                };
-
-                // 删除
-                function Del(id) {
-                    layer.confirm('确定删除该信息？', {
-                        btn: ['确定', '取消'] //按钮
-                    }, function () {
-                        $.post("/Case/DelRegisterInfo", { Id: id }, function (data) {
-                            if (data.state) {
-                                layer.msg(data.message, { icon: 1 }, function () {
-                                window.location.reload();
-                                });
-                            }
-                            else {
-                                layer.msg(data.message, { icon: 2 });
-                                return false;
-                            }
-                        }, "json")
-                    }, function () {
-                        // 取消
-                    });
-                };
-
-                // 引导宝贝回家
-                function btn_ydbbhj(id) {
-                        // 确定引导
-                        layer.open({
-                            type: 2,
-                            area: ['500px', '450px'],
-                            fixed: false, //不固定
-                            maxmin: true,
-                            title: '引导到宝贝回家',
-                            content: '/BBHJCase/AddBBHJ?id=' + id
-                        });
-                   
-                }
-
-
-                // 设置成功案例
-                function btn_SetSuccess(id) {
-                    layer.confirm('确定设置为成功案例？', {
-                        btn: ['确定', '取消'] //按钮
-                    }, function () {
-                        $.post("/Case/SetSuccess", { Id: id }, function (data) {
-                            if (data.state) {
-                                layer.msg(data.message, { icon: 1 }, function () {
-                                window.location.reload();
-                                });
-                            }
-                            else {
-                                layer.msg(data.message, { icon: 2 });
-                                return false;
-                            }
-                        }, "json")
-                    }, function () {
-                        // 取消
-                    });
-                }
-
-                // 退任务
-                function btn_ReturnTask(id) {
-                    layer.open({
-                        type: 2,
-                        area: ['500px', '450px'],
-                        fixed: false, //不固定
-                        maxmin: true,
-                        title: '退任务信息',
-                        content: '/ReturnCase/AddReturnTask?id=' + id
-                    });
-                }
-                
                 // 跟进详情
                 function gjxq(id)
                 {
@@ -243,7 +152,5 @@
         </div>
     </div>
 </body>
-
-
 
 
